fix(header): alignement recherche & filtres reponsiv

--- a/style_reservia.css
+++ b/style_reservia.css
@@ -249,8 +249,7 @@ footer {
   .loupe {
     display: flex;
     align-self: center;
-    padding: 4px;
-    align-items: center;
+        align-items: center;
       }
   #navigation {
     grid-column-gap: 0;
@@ -354,7 +353,39 @@ footer {
   margin-left: -18px;
   margin-top: -2px;
 }
-
+@media all and (max-width: 600px) {
+  /* vue mobile filtre*/
+  .monfiltre {
+    margin-right: 1%;
+    margin-left: 0;
+    margin-bottom: 10px;
+  }
+  .filtres_responsive{
+    justify-content:left;
+    row-gap: 10px;
+    gap: 5px;
+    margin-left: 0;
+  }
+  .filtres{
+    gap:0;
+    margin-left: 0;
+  }
+  .filtre_elements {
+    display: flex;
+    flex-direction: row;
+    justify-content:left;
+     border: #f2f2f2 solid 2px;
+    border-radius: 20px 20px 20px 20px;
+    margin-right: 5px;
+    height: 46px;
+    padding-right: 10px;
+    font-size: 16px;
+    margin-left: 10px;
+    }
+.filtre_elements .fa-stack-1x {
+  font-size: 17px;
+  }
+}
 /* Couleur de l'icon */
 .blue_icon {
   color: #0065fc;
